k8s/ecommerce-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: ankitdawra/ecommerce-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
        - name: product-microservice
          image: ankitdawra/product-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
spec:
  selector:
    app: ecommerce-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
