k8s/product-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-microservice
  template:
    metadata:
      labels:
        app: product-microservice
    spec:
      containers:
        - name: product-microservice
          image: ankitdawra/product-microservice:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-microservice
spec:
  selector:
    app: product-microservice
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
  type: NodePort
